welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: Missing closing brace `}' assumed here
while (estSurMessage()) {
^